Gear page fixed

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
@@ -2,6 +2,16 @@
 
 <script type="text/html" id="B787_10_SYS_Template">
     <svg viewBox="0 0 1200 1800">
+        <defs>
+            <clipPath
+                    clipPathUnits="userSpaceOnUse"
+                    id="crosshatch-clip-path">
+                <path
+                        id="crosshatch-clip-rect"
+                        d="m 136,1328 h 192 v 77 H 136 Z"
+                        style="fill:none;fill-opacity:0;"/>
+            </clipPath>
+        </defs>
         <g id="PageButtonSmallTemplate">
             <path class="topLeftBorder" d="M0 0 L200 0 l-10 10 L10 95 l-10 10" />
             <path class="bottomRightBorder" d="M200 105 L200 0 l-10 10 L10 95 l-10 10" />
@@ -412,7 +422,81 @@
             </g>
 
             <g id="GEAR_Page">
+                <g id="gears-numbers">
+                    <text class="gear-number-label" x="168" y="798.5" id="gear-number-label-1">1</text>
+                    <text class="gear-number-label" x="290" y="798.5" id="gear-number-label-2">2</text>
+                    <text class="gear-number-label" x="882" y="798.5" id="gear-number-label-3">3</text>
+                    <text class="gear-number-label" x="1004" y="798.359" id="gear-number-label-4">4</text>
+                    <text class="gear-number-label" x="168" y="1293.891" id="gear-number-label-5">5</text>
+                    <text class="gear-number-label" x="290" y="1294.5" id="gear-number-label-6">6</text>
+                    <text class="gear-number-label" x="882" y="1293.914" id="gear-number-label-7">7</text>
+                    <text class="gear-number-label" x="1006" y="1294.5" id="gear-number-label-8">8</text>
+                    <text class="gear-number-label" x="528" y="460.5" id="gear-number-label-9">9</text>
+                    <text class="gear-number-label" x="650" y="460.5" id="gear-number-label-10">10</text>
+                </g>
 
+                <g id="gear-doors">
+                    <g id="crosshatches">
+                        <path     id="crosshatch-top"     class="crosshatch"     clip-path="url(#crosshatch-clip-path)"     transform="translate(358,-850)"     d="m 166.1931,1310.909 c 0,0 -79.99995,105 -79.99995,105 m 209.99995,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 100,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 0,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -79.99995,105 -79.99995,105" />
+                        <path     id="crosshatch-bottom-left"     class="crosshatch"     clip-path="url(#crosshatch-clip-path)"     d="m 166.1931,1310.909 c 0,0 -79.99995,105 -79.99995,105 m 209.99995,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 100,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 0,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -79.99995,105 -79.99995,105" />
+                        <path     id="crosshatch-bottom-right"     class="crosshatch"     clip-path="url(#crosshatch-clip-path)"     transform="translate(713)"     d="m 166.1931,1310.909 c 0,0 -79.99995,105 -79.99995,105 m 209.99995,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 90,-105 c 0,0 -80,105 -80,105 m 100,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 0,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -80,105 -80,105 m 70,-105 c 0,0 -79.99995,105 -79.99995,105" />
+                    </g>
+
+                    <g id="door-rects">
+                        <rect id="door-rect-top" class="door-rect"  width="190"  height="75"  x="494.5" y="480" />
+                        <rect id="door-rect-bottom-left" class="door-rect"  width="190"  height="75"  x="137" y="1330" />
+                        <rect id="door-rect-bottom-right" class="door-rect"  width="190"  height="75"  x="849" y="1330" />
+                    </g>
+
+                    <g id="door-status-labels">
+                        <text class="door-status-label" x="510" y="534" id="closed-label-top">CLOSED</text>
+                        <text class="door-status-label" x="152" y="1384" id="closed-label-bottom-1">CLOSED</text>
+                        <text class="door-status-label" x="864" y="1384" id="closed-label-bottom-2">CLOSED</text>
+                    </g>
+                </g>
+
+                <g id="door-labels">
+                    <text class="door-label" x="390" y="534" id="door-label-top">DOOR</text>
+                    <text class="door-label" x="590" y="1384" id="door-label-bottom">DOOR</text>
+                </g>>
+
+
+                <rect  style="fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#ffffff;stroke-width:4" id="rect4081"  width="11"  height="76"  x="333" y="876.7767" />
+                <rect  style="fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#ffffff;stroke-width:4" id="rect4081-47"  width="11"  height="76"  x="118" y="876.7767" />
+                <rect  style="fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#ffffff;stroke-width:4" id="rect4081-3"  width="11"  height="76"  x="333" y="1106.776" />
+                <rect  style="fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#ffffff;stroke-width:4" id="rect4081-81"  width="11"  height="76"  x="118" y="1106.776" />
+                <rect  style="fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#ffffff;stroke-width:4" id="rect4081-1"  width="11"  height="76"  x="832" y="1106.776" />
+                <rect  style="fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#ffffff;stroke-width:4" id="rect4081-9"  width="11"  height="76"  x="1047" y="1106.776" />
+                <rect  style="fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#ffffff;stroke-width:4" id="rect4081-89" width="11" height="76" x="1047" y="876.7767" />
+                <rect  style="fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#ffffff;stroke-width:4" id="rect4081-24" width="11" height="76" x="832" y="876.7767" />
+
+
+                <g id="brake-temperatures">
+                    <text class="brake-temperature-label" x="40" y="960" id="brake-temperature-label-1">0.0</text>
+                    <text class="brake-temperature-label" x="354" y="960" id="brake-temperature-label-2">0.0</text>
+                    <text class="brake-temperature-label" x="754" y="960" id="brake-temperature-label-3">0.0</text>
+                    <text class="brake-temperature-label" x="1068" y="960" id="brake-temperature-label-4">0.0</text>
+                    <text class="brake-temperature-label" x="40" y="1190" id="brake-temperature-label-5">0.0</text>
+                    <text class="brake-temperature-label" x="354" y="1190" id="brake-temperature-label-6">0.0</text>
+                    <text class="brake-temperature-label" x="754" y="1190" id="brake-temperature-label-7">0.0</text>
+                    <text class="brake-temperature-label" x="1068" y="1190" id="brake-temperature-label-8">0.0</text>
+                </g>
+
+                <g id="tire-pressures">
+                    <text class="tire-pressure-label" x="170" y="928" id="tire-pressure-label-1">215</text>
+                    <text class="tire-pressure-label" x="292" y="928" id="tire-pressure-label-2">215</text>
+                    <text class="tire-pressure-label" x="884" y="928" id="tire-pressure-label-3">215</text>
+                    <text class="tire-pressure-label" x="1006" y="928" id="tire-pressure-label-4">215</text>
+                    <text class="tire-pressure-label" x="170" y="1158" id="tire-pressure-label-5">215</text>
+                    <text class="tire-pressure-label" x="292" y="1158" id="tire-pressure-label-6">215</text>
+                    <text class="tire-pressure-label" x="884" y="1158" id="tire-pressure-label-7">215</text>
+                    <text class="tire-pressure-label" x="1006" y="1158" id="tire-pressure-label-8">215</text>
+                    <text class="tire-pressure-label" x="528" y="326" id="tire-pressure-label-9">215</text>
+                    <text class="tire-pressure-label" x="650" y="326" id="tire-pressure-label-10">215</text>
+                </g>
+
+                <path id="gears-main-path"
+                      d="m 944.9191,915 c 0,0 0,230 0,230 M 230.9192,915 c 0,0 0,230 0,230 M 569,312.7767 c 0,0 40,0 40,0 m 316,602 c 0,0 40,0 40,0 m -40,230.0003 c 0,0 40,0 40,0 m -755,0 c 0,0 40,0 40,0 M 210,914.7767 c 0,0 40,0 40,0 M 609,255.9175 V 370.9178 M 690.838,255.9175 V 370.9178 M 609,255.9175 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9194,0 40.91924,40.91924 0 0 1 20.459,35.4371 m 0,113.7193 a 40.91924,40.91924 0 0 1 -20.459,35.4362 40.91924,40.91924 0 0 1 -40.9194,0 A 40.91924,40.91924 0 0 1 609,369.6368 M 487,255.9175 v 115 m 81.8384,-115 v 115 M 487,255.9175 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.4371 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.4365 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 487,369.6365 m 478,718.2805 v 115 m 81.838,-115 v 115 m -81.838,-115 a 40.91924,40.91924 0 0 1 20.4596,-35.437 40.91924,40.91924 0 0 1 40.9194,0 40.91924,40.91924 0 0 1 20.459,35.437 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.459,35.437 40.91924,40.91924 0 0 1 -40.9194,0 A 40.91924,40.91924 0 0 1 965,1201.636 M 843,1087.917 v 115 m 81.8384,-115 v 115 M 843,1087.917 a 40.91924,40.91924 0 0 1 20.4596,-35.437 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.437 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.437 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 843,1201.636 M 965,857.9175 v 115.0003 m 81.838,-115.0003 V 972.9178 M 965,857.9175 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9194,0 40.91924,40.91924 0 0 1 20.459,35.4371 m 0,113.7193 a 40.91924,40.91924 0 0 1 -20.459,35.4362 40.91924,40.91924 0 0 1 -40.9194,0 A 40.91924,40.91924 0 0 1 965,971.6368 M 843,857.9175 v 115 m 81.8384,-115 v 115 M 843,857.9175 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.4371 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.4365 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 843,971.6365 M 251,1087.917 v 115 m 81.8384,-115 v 115 M 251,1087.917 a 40.91924,40.91924 0 0 1 20.4596,-35.437 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.437 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.437 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 251,1201.636 M 129,1087.917 v 115 m 81.8384,-115 v 115 M 129,1087.917 a 40.91924,40.91924 0 0 1 20.4596,-35.437 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.437 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.437 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 129,1201.636 M 251,857.9174 V 972.9177 M 332.8384,857.9174 V 972.9177 M 251,857.9174 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.4371 m 0,113.7193 a 40.91924,40.91924 0 0 1 -20.4596,35.4363 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 251,971.6367 M 129,857.9174 v 115 m 81.8384,-115 v 115 M 129,857.9174 a 40.91924,40.91924 0 0 1 20.4596,-35.4371 40.91924,40.91924 0 0 1 40.9192,0 40.91924,40.91924 0 0 1 20.4596,35.4371 m 0,113.719 a 40.91924,40.91924 0 0 1 -20.4596,35.4366 40.91924,40.91924 0 0 1 -40.9192,0 A 40.91924,40.91924 0 0 1 129,971.6364" />
             </g>
 
             <g id="FCTL_Page">
