payload manager added

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -150,7 +150,7 @@
                     <input class="fms-button page-button fms-nav-rad active" value="NAV RAD" type="button"/>
                     <input class="fms-button page-button fms-ofst active" value="OFST" type="button"/>
                     <input class="fms-button page-button fms-rta active" value="RTA" type="button"/>
-                    <input class="fms-button page-button fms-empty" value="" type="button"/>
+                    <input class="fms-button page-button fms-heavy active" value="HEAVY" type="button"/>
                     <input class="fms-button page-button fms-empty" value="" type="button"/>
                     <input class="fms-button page-button fms-empty" value="" type="button"/>
                     <input class="fms-button page-button fms-prev-page active" value="PREV PAGE" type="button"/>
@@ -222,4 +222,10 @@
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_SelectWptPage.js"></script>
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_VNAVPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_HeavyPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_PayloadManagerPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_SimRateManagerPage.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.js"></script>
