--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/SAI/B787_10_SAI.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/SAI/B787_10_SAI.html
@@ -39,6 +39,8 @@
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/NavSystem.js"></script>
 
 <!-- B78XH custom files start -->
+<script type="text/html" import-script="/B78XH/Systems/B78XH_Initializer.js"></script>
+<script type="text/html" import-script="/B78XH/Systems/B78XH_IRS.js"></script>
 <script type="text/html" import-script="/B78XH/Systems/B78XH_APUInfo.js"></script>
 <script type="text/html" import-script="/B78XH/Systems/B78XH_APU.js"></script>
 <script type="text/html" import-script="/B78XH/Systems/B78XH_Systems.js"></script>
