--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -190,6 +190,12 @@
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/Boeing/Boeing_FMC.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/FMC/FMCDataManager.js"></script>
 
+<!-- Heavy utils -->
+<script type="text/html" import-script="/Heavy/SimBrief/SimBriefCredentials.js"></script>
+<script type="text/html" import-script="/Heavy/SimBrief/SimBriefApi.js"></script>
+<script type="text/html" import-script="/Heavy/SimBrief/SimBrief.js"></script>
+<!-- Heavy utils end -->
+
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_IdentPage.js"></script>
 <script type="text/html"
@@ -209,6 +215,8 @@
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_RoutePage.js"></script>
 <script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_RouteRequestPage.js"></script>
+<script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_DepArrPage.js"></script>
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_DeparturesPage.js"></script>
@@ -226,6 +234,8 @@
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_VNAVPage.js"></script>
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_HeavyPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_SimBriefConfigurationPage.js"></script>
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_HeavyConfigurationPage.js"></script>
 <script type="text/html"
