--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
@@ -90,6 +90,10 @@
 
 <script type="text/html" import-script="/JS/SimPlane.js"></script>
 
+<!-- Heavy utils -->
+<script type="text/html" import-script="/Heavy/Utils/UpdateDelayer.js"></script>
+<!-- Heavy utils end -->
+
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/Templates/Highlight/Highlight.js"></script>
