--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
@@ -59,25 +59,29 @@
         <div id="VORDMENavaids">
             <div id="VORDMENavaid_Left" style="display:none">
                 <svg>
-                    <text id="State" x="50%" y="16%" alignment-baseline="middle"></text>
-                    <text id="ID" x="42.5%" y="50%" alignment-baseline="middle"></text>
-                    <text id="Mode" x="67.5%" y="50%" alignment-baseline="middle"></text>
-                    <text id="Distance" x="50%" y="84%" alignment-baseline="middle">--</text>
-                    <text id="Unit" x="75%" y="84%" alignment-baseline="middle">nm</text>
-                    <path id="Arrow" d="M0,25 L0,0 L-15,0 L0,-25 L0,-35 M0,-25 L15,0 L0,0"
-                          transform="translate(50 55)"/>
+                    <text id="State" x="20%" y="20%" alignment-baseline="middle"></text>
+                    <text id="ID" x="20%" y="46%" alignment-baseline="middle"></text>
+                    <text id="Mode" x="60%" y="46%" alignment-baseline="middle"></text>
+                    <text id="Distance" x="37%" y="75%" alignment-baseline="middle">--</text>
+                    <text id="Unit" x="40%" y="75%" alignment-baseline="middle">NM</text>
+                    <path id="ArrowVor" d="M60 10 L50 0 L40 10 M50 0 L50 55 M65 45 L35 45"
+                          transform="translate(-10 12)"/>
+                    <path id="ArrowAdf" d="M60 10 L50 0 L40 10 M50 0 L50 55 M65 45 L35 45"
+                          transform="translate(-10 12)"/>
                 </svg>
             </div>
 
             <div id="VORDMENavaid_Right" style="display:none">
                 <svg>
-                    <text id="State" x="50%" y="16%" alignment-baseline="middle"></text>
-                    <text id="ID" x="42.5%" y="50%" alignment-baseline="middle"></text>
-                    <text id="Mode" x="67.5%" y="50%" alignment-baseline="middle"></text>
-                    <text id="Distance" x="25%" y="84%" alignment-baseline="middle">--</text>
-                    <text id="Unit" x="50%" y="84%" alignment-baseline="middle">nm</text>
-                    <path id="Arrow" d="M-8,25 L-8,0 L-15,0 L0,-25 L0,-35 M0,-25 L15,0 L8,0 L8,25"
-                          transform="translate(280 55)"/>
+                    <text id="State" x="80%" y="20%" alignment-baseline="middle"></text>
+                    <text id="ID" x="80%" y="46%" alignment-baseline="middle"></text>
+                    <text id="Mode" x="40%" y="46%" alignment-baseline="middle"></text>
+                    <text id="Distance" x="80%" y="75%" alignment-baseline="middle">--</text>
+                    <text id="Unit" x="83%" y="75%" alignment-baseline="middle">NM</text>
+                    <path id="ArrowVor" d="M60 10 L50 0 L40 10 L40 45 L30 45 L30 55 L70 55 L70 45 L60 45 Z"
+                          transform="translate(235 12)"/>
+                    <path id="ArrowAdf" d="M60 10 L50 0 L40 10 L40 45 L30 45 L30 55 L70 55 L70 45 L60 45 Z"
+                          transform="translate(235 12)"/>
                 </svg>
             </div>
         </div>
