basic files added and basic imports

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -169,6 +169,13 @@
 </script>
 
 <script type="text/html" import-script="/JS/SimPlane.js"></script>
+<!-- WT files -->
+<script type="text/html" import-script="/WTPages/WTLibs/WT_SimPlaneMod.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/DataStore.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/WTUtils.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/WT_ConvertUnit.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/WT_GCMath.js"></script>
+<!-- WT files END -->
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
 
@@ -177,7 +184,12 @@
 <script type="text/html" import-script="/HPages/VCockpit/Instruments/Shared/FlightElements/Waypoint.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/Approach.js"></script>
 <script type="text/html" import-script="/HPages/VCockpit/Instruments/Shared/FlightElements/WaypointLoader.js"></script>
-<script type="text/html" import-script="/HPages/VCockpit/Instruments/Shared/FlightElements/FlightPlanManager.js"></script>
+
+<!-- WT files -->
+<script type="text/html" import-script="/WTPages/WTLibs/LzUtf8.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/wtsdk.js"></script>
+<!-- WT files END -->
+
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/GeoCalc.js"></script>
 
 <script type="text/html"
@@ -192,6 +204,15 @@
 <script type="text/html" import-script="/HPages/VCockpit/Instruments/Airliners/Shared/Boeing/Heavy_Boeing_FMC.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/FMC/FMCDataManager.js"></script>
 
+<!-- WT files -->
+<script type="text/html" import-script="/WTPages/WTLibs/Autopilot/CJ4NavModeSelector.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/Autopilot/WT_BaseVnav.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/Autopilot/AutopilotMath.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/Autopilot/HoldsDirector.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/Autopilot/LocDirector.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/Autopilot/LNavDirector.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/Autopilot/WT_VnavAutopilot.js"></script>
+<!-- WT files END -->
 <!-- Heavy utils -->
 <script type="text/html" import-script="/Heavy/SimBrief/SimBrief.js"></script>
 <script type="text/html" import-script="/Heavy/Utils/UpdateDelayer.js"></script>
