--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
@@ -17,7 +17,19 @@
 
 <script type="text/html" import-script="/JS/SimPlane.js"></script>
 
+<!-- WT files -->
+<script type="text/html" import-script="/WTPages/WTLibs/WT_SimPlaneMod.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/DataStore.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/WT_ConvertUnit.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/WT_GCMath.js"></script>
+<!-- WT files END -->
+
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
+
+<!-- WT files -->
+<script type="text/html" import-script="/WTPages/WTLibs/Autopilot/AutopilotMath.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/Autopilot/HoldsDirector.js"></script>
+<!-- WT files END -->
 
 <script type="text/html" import-template="/HPages/VCockpit/Instruments/Shared/Map/MapInstrument.html"></script>
 
@@ -49,3 +61,9 @@
 <script type="text/html" import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_INFO.html"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.js"></script>
+
+<!-- WT files -->
+<script type="text/html" import-script="/WTPages/WTLibs/DataStore.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/LzUtf8.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/wtsdk.js"></script>
+<!-- WT files END -->
