--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
@@ -90,11 +90,22 @@
 
 <script type="text/html" import-script="/JS/SimPlane.js"></script>
 
+<!-- WT files -->
+<script type="text/html" import-script="/WTPages/WTLibs/WT_SimPlaneMod.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/DataStore.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/WT_GCMath.js"></script>
+<!-- WT files END -->
+
 <!-- Heavy utils -->
 <script type="text/html" import-script="/Heavy/Utils/UpdateDelayer.js"></script>
 <!-- Heavy utils end -->
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
+
+<!-- WT files -->
+<script type="text/html" import-script="/WTPages/WTLibs/Autopilot/AutopilotMath.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/Autopilot/HoldsDirector.js"></script>
+<!-- WT files END -->
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/Templates/Highlight/Highlight.js"></script>
 
@@ -103,6 +114,11 @@
 
 <script type="text/html" import-template="/HPages/VCockpit/Instruments/Shared/Map/MapInstrument.html"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/NavSystem.js"></script>
+
+<!-- WT files -->
+<script type="text/html" import-script="/WTPages/WTLibs/LzUtf8.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/wtsdk.js"></script>
+<!-- WT files END -->
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/AirspeedIndicator.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/AltimeterIndicator.js"></script>
