--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -205,7 +205,7 @@
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/FMC/FMCDataManager.js"></script>
 
 <!-- WT files -->
-<script type="text/html" import-script="/WTPages/Autopilot/CJ4NavModeSelector.js"></script>
+<script type="text/html" import-script="/B78XH/Autopilot/B78XHNavModeSelector.js"></script>
 <script type="text/html" import-script="/WTPages/Autopilot/WT_BaseVnav.js"></script>
 <script type="text/html" import-script="/WTPages/Autopilot/AutopilotMath.js"></script>
 <script type="text/html" import-script="/WTPages/Autopilot/HoldsDirector.js"></script>
@@ -258,6 +258,8 @@
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_RouteDataPage.js"></script>
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_ArrivalsPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/CJ4_FMC_PilotWaypoint.js"></script>
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_HeavyPage.js"></script>
 <script type="text/html"
