--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -212,6 +212,7 @@
 <script type="text/html" import-script="/WTPages/Autopilot/LocDirector.js"></script>
 <script type="text/html" import-script="/WTPages/Autopilot/LNavDirector.js"></script>
 <script type="text/html" import-script="/WTPages/Autopilot/WT_VnavAutopilot.js"></script>
+<script type="text/html" import-script="/WTPages/Autopilot/NavToNavTransfer.js"></script>
 <!-- WT files END -->
 <!-- Heavy utils -->
 <script type="text/html" import-script="/Heavy/SimBrief/SimBrief.js"></script>
@@ -258,6 +259,8 @@
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_RouteDataPage.js"></script>
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_ArrivalsPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_HoldsPage.js"></script>
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/CJ4_FMC_PilotWaypoint.js"></script>
 <script type="text/html"
