--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
@@ -112,9 +112,16 @@
 
     <svg id="align-times" irs-state="off">
         <text id="GS_FakeText" class="Small" x="22" y="45" alignment-baseline="baseline" irs-state="off">GS</text>
-        <text id="GS_FakeValue" class="Value" x="50" y="45" alignment-baseline="baseline" irs-state="off">---</text>
+        <text id="GS_FakeValue" class="Value" x="50" y="45" alignment-baseline="baseline" irs-state="off">---</text> <!-- --- -->
         <text id="time-to-align" class="align" x="13" y="70" alignment-baseline="baseline" irs-state="off">TIME TO ALIGN</text>
-        <text id="l-align" class="align" x="13" y="90" alignment-baseline="baseline" irs-state="off">05:53</text>
+        <text id="l-align" class="align align-value" x="13" y="90" alignment-baseline="baseline" irs-state="off">05:53</text>
+    </svg>
+
+    <svg id="align-times2" irs-state="off">
+        <text id="GS_FakeText2" class="Small" x="25" y="55" alignment-baseline="baseline" irs-state="off">GS</text>
+        <text id="GS_FakeValue2" class="Value" x="74" y="50" style="font-size: 40px;" alignment-baseline="baseline" irs-state="off">---</text> <!-- --- -->
+        <text id="time-to-align2" class="align" x="25" y="90" alignment-baseline="baseline" irs-state="off">TIME TO ALIGN</text>
+        <text id="l-align2" class="align align-value" x="25" y="125" alignment-baseline="baseline" irs-state="off">05:53</text>
     </svg>
 
     <div id="NavPanel">
