MISC - useImperial uses HeavyDivision.configuration now

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
@@ -23,6 +23,10 @@
 <script type="text/html" import-script="/WTPages/WTLibs/WT_GCMath.js"></script>
 <!-- WT files END -->
 
+<!-- Heavy utility files -->
+<script type="text/html" import-script="/Heavy/Utils/HeavyUtils.js"></script>
+<!-- WT  utility END -->
+
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
 
 <!-- WT files -->
