--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -200,6 +200,10 @@
 <script type="text/html" import-script="/WTPages/WTLibs/wtsdk.js"></script>
 <!-- WT files END -->
 
+<!-- Heavy utility files -->
+<script type="text/html" import-script="/Heavy/Utils/HeavyUtils.js"></script>
+<!-- WT  utility END -->
+
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/GeoCalc.js"></script>
 
 <script type="text/html"
